--- a/createfromobjects_an_ifc.ipynb
+++ b/createfromobjects_an_ifc.ipynb
@@ -127,7 +127,7 @@
    "id": "a3f29aae-0ace-4e77-b6bb-6479cbf5260a",
    "metadata": {},
    "source": [
-    "however on does funtion"
+    "however one does funtion"
    ]
   },
   {
