--- a/createfromobjects_an_ifc.ipynb
+++ b/createfromobjects_an_ifc.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "ca4b5d03-8759-4c76-974f-0561c84a720d",
    "metadata": {},
    "outputs": [],
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "682169d4-963d-440a-b112-86d5b5e1f617",
    "metadata": {},
    "outputs": [],
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "2e753dd9-fe38-4e65-bf3b-2c3434d8211e",
    "metadata": {},
    "outputs": [],
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "9a30d1cd-d573-4e9e-a738-9a23a7ccf93f",
    "metadata": {},
    "outputs": [],
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "237fc80f-90dd-45bc-8eba-93ea4ab5c2f2",
    "metadata": {},
    "outputs": [],
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "id": "2654a431-7885-4bac-96dd-0ad063182dac",
    "metadata": {},
    "outputs": [],
@@ -93,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "id": "b1d0ac26-55b1-4b04-8931-db6096b3ccd6",
    "metadata": {},
    "outputs": [],
@@ -132,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "id": "7e91f023-22b5-40e3-8c61-3b9208fe30ea",
    "metadata": {},
    "outputs": [],
@@ -143,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "id": "a283f171-c78b-4692-8e61-48fa60c358f2",
    "metadata": {},
    "outputs": [],
@@ -153,8 +153,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "1b5b0c95-15b1-4cbd-9850-e3a49e12db60",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "#17=IfcGeometricRepresentationSubContext('Body','Model',*,*,*,*,#16,$,.MODEL_VIEW.,$)"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tst.context"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8a80e590-cbf3-4341-b7bc-8f78705db27c",
    "metadata": {},
    "outputs": [],
    "source": []
